--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,4 +1,4 @@
-<div class="well hoverwell thumbnail">
+<div class="well hoverwell thumbnail" style="min-height: 210px;">
   <h2>{{event.name}}</h2>
   <div>Date: {{event.date}}</div>
   <div>Time: {{event.time}}</div>
