--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,7 +1,7 @@
 <div class="well hoverwell thumbnail" style="min-height: 210px;">
   <h2>{{event.name}}</h2>
   <div>Date: {{event.date}}</div>
-  <div>Time: {{event.time}}</div>
+  <div [class.green]="event.time === '8:00 am'">Time: {{event.time}}</div>
   <div>Price: ${{event.price}}</div>
   <div>
     <span>Location: {{event.location.address}}</span>
