--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -1,3 +1,9 @@
-<p>
-  create-event works!
-</p>
+<h1>New Event</h1>
+<hr>
+<div class="col-md-6">
+  <h3>[Create Event Form will go here]</h3>
+  <br>
+  <br>
+  <button class="btn btn-primary">Save</button>
+  <button class="btn btn-default" (click)="cancel()">Cancel</button>
+</div>
