--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -25,7 +25,7 @@
       <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
-            <a>Welcome John</a>
+            <a [routerLink]="['user/profile']">Welcome Stefan</a>
           </li>
         </ul>
       </div>
