--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -1,17 +1,19 @@
 <h1>Login</h1>
 <hr>
 <div class="col-md-4">
-  <form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" autocomplete="off">
+  <form #loginForm="ngForm" novalidate (ngSubmit)="login(loginForm.value)" autocomplete="off">
     <div class="form-group" >
       <label for="userName">User Name:</label>
-      <input (ngModel)="userName" name="userName" id="userName" type="text" class="form-control" placeholder="User Name..." />
+      <em *ngIf="loginForm.controls.userName?.invalid">Required</em>
+      <input (ngModel)="userName" name="userName" id="userName" required type="text" class="form-control" placeholder="User Name..." />
     </div>
     <div class="form-group" >
       <label for="password">Password:</label>
-      <input id="password" (ngModel)="password" name="password" type="password" class="form-control"placeholder="Password..." />
+      <em *ngIf="loginForm.controls.password?.invalid">Required</em>
+      <input id="password" (ngModel)="password" name="password" required type="password" class="form-control"placeholder="Password..." />
     </div>
 
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
     <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
   </form>
 </div>
