--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,8 +1,8 @@
 <div [routerLink]="['/events', event.id]" class="well hoverwell thumbnail" style="min-height: 210px;">
-  <h2>{{event.name}}</h2>
+  <h2>{{event.name | uppercase}}</h2>
   <div>Date: {{event.date}}</div>
   <div [class.green]="event.time === '8:00 am'">Time: {{event.time}}</div>
-  <div>Price: ${{event.price}}</div>
+  <div>Price:{{event.price | currency:'USD':true}}</div>
   <div>
     <span>Location: {{event.location.address}}</span>
     <span>&nbsp;</span>
