sorting data added

--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -29,17 +29,23 @@
       <h3 style="margin: 0">Sessions</h3>
     </div>
     <div class="col-md-7">
-      <button class="btn btn-default" (click)="filterBy = 'all'" [class.active]="filterBy === 'all'">All</button>
-      <button class="btn btn-default" (click)="filterBy = 'beginner'" [class.active]="filterBy === 'beginner'">Beginner</button>
-      <button class="btn btn-default" (click)="filterBy = 'intermediate'" [class.active]="filterBy === 'intermediate'">Intermediate</button>
-      <button class="btn btn-default" (click)="filterBy = 'advanced'" [class.active]="filterBy === 'advanced'">Advanced</button>
+      <div class="btn-group btn-group-sm" style="margin-right: 20px;margin-left: 20px;">
+        <button class="btn btn-default" (click)="sortBy = 'name'" [class.active]="sortBy === 'name'">By Name</button>
+        <button class="btn btn-default" (click)="sortBy = 'votes'" [class.active]="votes === 'beginner'">By Votes</button>
+      </div>
+      <div class="btn-group btn-group-sm">
+        <button class="btn btn-default" (click)="filterBy = 'all'" [class.active]="filterBy === 'all'">All</button>
+        <button class="btn btn-default" (click)="filterBy = 'beginner'" [class.active]="filterBy === 'beginner'">Beginner</button>
+        <button class="btn btn-default" (click)="filterBy = 'intermediate'" [class.active]="filterBy === 'intermediate'">Intermediate</button>
+        <button class="btn btn-default" (click)="filterBy = 'advanced'" [class.active]="filterBy === 'advanced'">Advanced</button>
+      </div>
     </div>
     <div class="col-md-2">
       <a (click)="addSession()">Add Session</a>
     </div>
   </div>
 
-  <session-list [filterBy]="filterBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+  <session-list [sortBy]="sortBy" [filterBy]="filterBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
 
   <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 
