--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -34,7 +34,7 @@
         <div class="form-group">
           <input type="text" [(ngModel)]="searchTerm" name="searchTerm" class="form-control" placeholder="Search Sessions" >
         </div>
-        <button class="btn btn-default" >
+        <button modal-trigger class="btn btn-default" >
           Search
         </button>
       </form>
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<simple-modal title="">
+<simple-modal title="Matching Sessions">
   <div class="list-group">
     <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.eventId]">
       {{session.name}}
