--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -44,7 +44,7 @@
 
 <simple-modal title="Matching Sessions">
   <div class="list-group">
-    <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.eventId]">
+    <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.id]">
       {{session.name}}
     </a>
   </div>
