--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<simple-modal title="Matching Sessions">
+<simple-modal closeOnBodyClick="true" title="Matching Sessions">
   <div class="list-group">
     <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.id]">
       {{session.name}}
