--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -22,9 +22,10 @@
       <em *ngIf="newEventForm.controls.price?.invalid && (newEventForm.controls.price?.touched)">Required</em>
       <input (ngModel)="price" name="price" required id="eventPrice" type="text" type="number" class="form-control" placeholder="event price..." />
     </div>
-  <div ngModelGroup="location">
+  <div ngModelGroup="location" #locationGroup="ngModelGroup" validateLocation>
     <div class="form-group">
       <label for="address">Event Location:</label>
+      <em *ngIf="locationGroup?.invalid && locationGroup?.touched">You must enter either full location OR an online URL</em>
       <input (ngModel)="address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..." />
     </div>
     <div class="row">
@@ -40,7 +41,7 @@
 
     <div class="form-group">
       <label for="onlineUrl">Online Url:</label>
-      <input (ngModel)="onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." />
+      <input (ngModel)="onlineUrl" name="onlineUrl" (change)="locationGroup.control.controls.address.updateValueAndValidity()" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." />
     </div>
     <div class="form-group" [ngClass]="{'error': newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched}">
       <label for="imageUrl">Image:</label>
